# attic-slindak

./: .gitignore  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  core
debian/: changelog  control  libslindak0-dev.install  rules  shlibs.local  slindak.install  slindweb.install
include/: bc.h  biglock.h  conf.h  lua-helpers.h  output.h  ov.h  package.h  slindak.h  suite.h
lua/: apt-conf.lua  config.lua  html.lua  lini.lua  slindak-config.lua
src/: Makefile.am  Makefile.in  aptconf.c  biglock.c  binary_cache.c  cgi-actions.c  cgi-actions.h  common.h  configuration.c  configuration.h  db.c  db.h  debfile.c  debfile.h  html_output.c  html_static.h  library.c  lists.c  lua.c  lua.h  main.c  messages.c  output.c  output.h  overrides.c  package.c  pool.c  pool.h  query.c  query.h  slind.c  slindak.c  slindweb.c  util.c  util.h
test/: 0000_base.test.c  0001_base.test.c  0002_base.test.c  0003_base.test.c  0004_base.test.c  0005_base.test.c  Makefile.am  Makefile.in  testlib.c  testsuite.c
